# stm32c8t6-mini-start

./: readme.md  stm32cmake生成bin与hex.md
1.original_program/stm32-f103c8t6/: stm32-f103c8t6.ioc
1.original_program/stm32-f103c8t6-cmake/: 103c8-cmake.ioc  CMakeLists.txt
1.original_program/stm32-f103c8t6-cmake/Core/Src/: gpio.c  main.c
1.original_program/stm32-f103c8t6/Core/Src/: gpio.c  main.c
1.original_program/stm32-f103c8t6/MDK-ARM/: startup_stm32f103xb.lst  stm32-f103c8t6.uvguix.29955  stm32-f103c8t6.uvoptx  stm32-f103c8t6.uvprojx
1.original_program/stm32-f103c8t6/MDK-ARM/stm32-f103c8t6/: gpio.crf  gpio.d  main.crf  main.d  startup_stm32f103xb.d  stm32-f103c8t6.axf  stm32-f103c8t6.build_log.htm  stm32-f103c8t6.hex  stm32-f103c8t6.htm  stm32-f103c8t6.lnp  stm32-f103c8t6.map  stm32-f103c8t6_stm32-f103c8t6.dep  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_it.d  (+18 more)
2.minimum_program/mini-stm32-f103c8t6-cmake/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
2.minimum_program/mini-stm32-f103c8t6-cmake/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
2.minimum_program/mini-stm32-f103c8t6-cmake/src/: core_cm3.h  main.c  stm32f103xb.h
2.minimum_program/mini-stm32-f103c8t6/MDK-ARM/: startup_stm32f103xb.lst  stm32-f103c8t6.uvguix.29955  stm32-f103c8t6.uvoptx  stm32-f103c8t6.uvprojx
2.minimum_program/mini-stm32-f103c8t6/src/: main.c  startup_stm32f103xb.s
(+10 files in other folders)
